# OS-labs

./: CMakeLists.txt  README.md  main.cpp  semaphore.h
sync_primitives/: philosophers.cpp  producer-consumer.cpp  readers-writers.cpp  sleeping_barber.cpp
